--- a/index.html
+++ b/index.html
@@ -3,17 +3,66 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>WEBSTUDIO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 
 <body>
-    <header>ааааааааааа
-        <nav></nav>
+    <header>
+        <a href="">WEBSTUDIO</a>
+        <nav>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
 
+        <section>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business <br />
+                problem to walk away with the<br />perfect and creative solution.</p>
+        </section>
+        <section>
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the<br /> brand's audience for the best price<br /> within the shortest
+                possible time. </p>
+        </section>
+        <section>
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that<br /> present the strongest digital growth<br /> opportunities and
+                minimizerisk.</p>
+        </section>
+        <section>
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital<br> experiences. We bring forth a deep<br> passion for
+                problem-solving. </p>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li><img src="./images/mark_guerrerojpg.jpg" alt="Mark Guerrero" width="264" height="380"></li>
+                <li><img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="380"></li>
+                <li><img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="380"></li>
+                <li><img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="380"></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="">WEBSTUDIO</a>
+        <p>Increase the flow of customers and<br /> sales for your business with digital<br /> marketing & growth
+            solutions.</p>
+    </footer>
 </body>
 
 </html>
