--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
 
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
+
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -46,12 +47,12 @@
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and
-                        minimizerisk.</p>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
-                    <p>Design practice focused on digital<br> experiences. We bring forth a deep<br> passion for
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
                         problem-solving.</p>
                 </li>
             </ul>
@@ -65,7 +66,7 @@
                     <img src="./images/mark_guerrerojpg.jpg" alt="Mark Guerrero" width="264" height="380">
                 </li>
                 <li>
-                    <h2>Tom Ford</h2>
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                     <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="380">
                 </li>
@@ -85,7 +86,7 @@
 
     </main>
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
