--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                 <li>
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
-                    <img src="./images/mark_guerrerojpg.jpg" alt="Mark Guerrero" width="264" height="380">
+                    <img src="./images/mark_guerrero.jpg" alt="Mark Guerrero" width="264" height="260">
                 </li>
                 <li>
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
-                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="380">
+                    <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264" height="260">
                 </li>
                 <li>
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
-                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="380">
+                    <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264" height="260">
                 </li>
                 <li>
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
-                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="380">
+                    <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264" height="260">
                 </li>
             </ul>
 
